# jit-allocator

./: Cargo.toml  LICENSE  README.md  a.out  file.c
examples/: simple.rs
src/: allocator.rs  lib.rs  main.rs  os.rs  util.rs  virtual_memory.rs
