[package]
name = "jit-allocator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
cfgenius = "0.1"
errno = "0.3"
chrono = "0.4"
once_cell = "1.7"
[cfg.'target_arch="x86_64"'.dependencies]
wasmtime-jit-icache-coherence = "10.0"