[package]
name = "jit-allocator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
cfgenius = "0.1"
errno = "0.3"
once_cell = "1.7"
intrusive-collections = "0.9"
parking_lot = "0.12"
cool-bitvector = "0.1"
[target.'cfg(target_arch="riscv64")'.dependencies]
wasmtime-jit-icache-coherence = "10.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["memoryapi", "sysinfoapi", "handleapi"] }